kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pw
  namespace: pw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pw
  template:
    metadata:
      labels:
        app: pw
    spec:
      containers:
        - name: pw
          image: tinyops/pw:1.4.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: tz-config
          hostPath:
            path: /etc/localtime
---
apiVersion: v1
kind: Service
metadata:
  name: pw-svc
  namespace: pw
spec:
  selector:
    app: pw
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pw-ingress
  namespace: pw
spec:
  ingressClassName: nginx
  rules:
    - host: pw.company.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pw-svc
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pw-redis
  namespace: pw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pw-redis
  template:
    metadata:
      labels:
        app: pw-redis
    spec:
      containers:
        - name: pw-redis
          image: redis:7.2.1-alpine3.18
          args: ["redis-server", "--save", "", "--appendonly", "no", "--maxmemory", "128mb"]
---
apiVersion: v1
kind: Service
metadata:
  name: pw-redis-service
  namespace: pw
spec:
  selector:
    app: pw-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
